# AI-homework-checking

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
auth_service/: Dockerfile  __init__.py  alembic.ini  entrypoint.sh  settings.py
auth_service/alembic/: env.py
auth_service/alembic/versions/: 4f18553fdab6_add_server_onupdate_to_updated_at_field.py  b4e974836ae5_initial_add_user_models.py
auth_service/app/: logger.py
auth_service/app/db/: enums.py  models.py  session.py
